# VectorizedMultiAgentSimulator

./: .gitignore  CLAUDE.md  README.md  setup.cfg  setup.py
multi_scenario/: .gitignore  .pre-commit-config.yaml  README.md  implementation_plan.md  mkdocs.yml  plan.md  pyproject.toml
multi_scenario/.streamlit/: config.toml
multi_scenario/configs/: ovh.yaml  ovh.yaml.example
multi_scenario/docs/: csv_format_decision.md  example_config.yaml  index.md  ovh_setup.md  ovh_smoke_checklist.md
multi_scenario/docs/_drafts/: rendezvous_comm_history.md
multi_scenario/docs/cli/: eval.md  index.md  inspect_lero.md  regenerate_videos.md  run.md  sweep.md  upload_code.md  validate.md
multi_scenario/docs/concepts/: hex_architecture.md  index.md  lero.md  metrics.md  reward_safeguards.md
multi_scenario/docs/frontend/: comparison_page.md  experiments_page.md  index.md  run_detail_page.md  submit_page.md
multi_scenario/docs/getting_started/: example_config.yaml  index.md  installation.md  submitting_experiments.md
multi_scenario/docs/operations/: index.md  lessons_learned.md  ovh_setup.md  secrets_and_env.md  testing.md
multi_scenario/docs/ports/: index.md
multi_scenario/docs/reproducibility/: determinism_test.md  index.md  lero_s3b_local_reproduction.md
multi_scenario/docs/results_analysis/: csv_aggregation.md  index.md  streamlit_dashboard.md
multi_scenario/docs/scenarios/: discovery.md  flocking.md  index.md  navigation.md  transport.md
multi_scenario/multi_scenario/docs/_drafts/: F8_F11_plan_draft.md
multi_scenario/scripts/: compare_to_reference.py  f5_5_format_decision.py  port_lero_prompts.py  run_er1_reproducibility.py
multi_scenario/src/multi_scenario/: __init__.py  cli.py
multi_scenario/src/multi_scenario/application/: config_validation.py  experiment_service.py  factories.py  lero_factory.py  lero_orchestrator.py  ovh_pullback.py  regenerate_videos.py  runner_provisioning.py  secrets_priming.py  submission.py
multi_scenario/src/multi_scenario/cli/: __init__.py  __main__.py  _app.py  _helpers.py  consolidate.py  eval_run.py  inspect_lero.py  regenerate_videos.py  resume.py  run.py  sweep.py  upload_code.py  validate.py  version.py
multi_scenario/src/multi_scenario/domain/: hashing.py  models.py  ports.py
multi_scenario/src/multi_scenario/frontend/: Dashboard.py  __init__.py  aggregations.py  benchmarl_scalars_glossary.py  charts.py  doc_links.py  filters.py  forms.py  lero_preflight.py  metrics_glossary.py  preflight.py  run_detail_loader.py  runs_loader.py  scenarios.py  sidebar.py  streamlit_app.py  submit_workflow.py  theme.py
multi_scenario/tests/: conftest.py
multi_scenario/tests/bdd/: conftest.py  test_submit.py
multi_scenario/tests/bdd/features/: submit.feature
multi_scenario/tests/integration/: conftest.py  test_record_video_defaults.py
multi_scenario/tests/integration/algorithms/: test_benchmarl_video_safe.py  test_checkpoint_retention.py  test_experiment_config_propagation.py  test_iddpg.py  test_ippo.py  test_isac.py  test_maddpg.py  test_mappo.py  test_masac.py
multi_scenario/tests/integration/application/: test_experiment_service_lero_branch.py  test_lero_orchestrator.py
multi_scenario/tests/integration/cli/: test_consolidate.py  test_eval.py  test_regenerate_videos.py  test_resume.py  test_run.py  test_sweep.py  test_sweep_ovh.py  test_upload_code.py  test_validate.py
multi_scenario/tests/integration/dispatch_matrix/: _helpers.py  test_dispatch_matrix.py
multi_scenario/tests/integration/frontend/: _submit_helpers.py  test_aggregations.py  test_dashboard_smoke.py  test_doc_links.py  test_experiments_page_smoke.py  test_filters.py  test_lero_preflight.py  test_metrics_glossary.py  test_preflight.py  test_run_detail_loader.py  test_run_detail_page_smoke.py  test_runs_loader.py  test_submit_helpers_smoke.py  test_submit_page_e2e.py  test_submit_workflow.py
multi_scenario/tests/integration/lero/: test_benchmarl_evaluator.py  test_codegen_byte_parity.py  test_filesystem_trace_writer.py  test_orchestrator_with_real_benchmarl_smoke.py  (+1 more)
multi_scenario/tests/reproducibility/: test_compare_to_reference.py  test_er1_config_parity.py  test_lero_s3b_local_config_parity.py  test_same_seed_byte_equal.py
multi_scenario/tests/unit/: test_domain_isolation.py  test_no_phase_markers.py  test_smoke.py
(+667 files in other folders)
