[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-scenario"
version = "0.0.1"
description = "Multi-scenario cooperative MARL framework (placeholder name; renamed at F10.4)."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchrl",
    "tensordict",
    "vmas",
    "benchmarl",
    "imageio[ffmpeg]>=2.30",
    "pyyaml",
    "pydantic",
    "pandas",
    "typer",
    "cryptography>=41",
    "boto3>=1.30",
    "streamlit>=1.30",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "pylint",
    "moto>=5.0",
]

[project.scripts]
multi-scenario = "multi_scenario.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_scenario"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
]

[tool.pylint.main]
# Tell pylint where the package source is so it can resolve imports.
init-hook = 'import sys; sys.path.insert(0, "src")'

[tool.pylint."messages control"]
# duplicate-code (R0801) is noisy for test fakes that intentionally mirror the
# same Protocol's structural shape. Suppressing globally; its signal value is
# low for this codebase shape.
disable = ["duplicate-code"]
