[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-scenario"
version = "0.0.1"
description = "Multi-scenario cooperative MARL framework (placeholder name; renamed at F10.4)."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchrl",
    "tensordict",
    "vmas",
    "benchmarl",
    "imageio[ffmpeg]>=2.30",
    "pyyaml",
    "pydantic",
    "pandas",
    "typer",
    "cryptography>=41",
    "boto3>=1.30",
    "streamlit>=1.30",
    "matplotlib>=3.7",
    "litellm>=1.40",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-bdd>=7.0",  # F7.7.C2 — Gherkin features for top user journeys
    "ruff",
    "pre-commit",
    "pylint",
    "moto>=5.0",
]
# Opt-in extra for real-browser Playwright tests. Adds ~150 MiB of
# Chromium on first ``playwright install chromium`` after pip install.
# Tests under ``tests/integration/playwright/`` skip cleanly when this
# extra isn't installed.
playwright = [
    "playwright>=1.40",
    "pytest-playwright>=0.4",
]

[project.scripts]
multi-scenario = "multi_scenario.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_scenario"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "playwright: real-browser tests (opt-in via -m playwright, needs `pip install -e .[playwright] && playwright install chromium`)",
]

[tool.pylint.main]
# Tell pylint where the package source is so it can resolve imports.
init-hook = 'import sys; sys.path.insert(0, "src")'

[tool.pylint."messages control"]
# duplicate-code (R0801) is noisy for test fakes that intentionally mirror the
# same Protocol's structural shape. Suppressing globally; its signal value is
# low for this codebase shape.
disable = ["duplicate-code"]
